--- a/style.css
+++ b/style.css
@@ -126,3 +126,28 @@ body {
     margin-left: 10px;
     font-size: 1.2em;
   }
+  table {
+    border-collapse: collapse;
+    margin: 20px auto;
+  }
+  
+  th, td {
+    border: 1px solid black;
+    padding: 10px;
+  }
+  
+  th {
+    background-color: #ccc;
+    text-align: left;
+  }
+  
+  td {
+    text-align: justify;
+  }
+  
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+  }
