--- a/style.css
+++ b/style.css
@@ -145,6 +145,10 @@ body {
     text-align: justify;
   }
   
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  
   img {
     display: block;
     margin: 0 auto;
