--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ body {
   a:hover {
     text-decoration: underline;
   }
+  
   body {
     background-color: #f5f5f5;
   }
@@ -126,23 +127,26 @@ body {
     margin-left: 10px;
     font-size: 1.2em;
   }
+  
   table {
     border-collapse: collapse;
     margin: 20px auto;
+    font-size: 1.2em;
+    width: 100%;
   }
   
   th, td {
     border: 1px solid black;
     padding: 10px;
+    text-align: left;
   }
   
   th {
     background-color: #ccc;
-    text-align: left;
   }
   
   td {
-    text-align: justify;
+    background-color: #f5f5f5;
   }
   
   tr:nth-child(even) {
